manifests/dev/radarr/Deployment-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
    app.kubernetes.io/version: latest
  name: radarr
  namespace: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/name: radarr
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: RADARR__POSTGRES__HOST
              value: postgresql.postgresql
            - name: RADARR__POSTGRES__PORT
              value: "5432"
            - name: RADARR__POSTGRES__MAINDB
              value: radarr
            - name: RADARR__POSTGRES__LOGDB
              value: radarr-log
            - name: RADARR__POSTGRES__USER
              value: radarr
            - name: RADARR__POSTGRES__PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: radarr-database-password
          image: linuxserver/radarr:6.3.0.10514-ls315
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 90
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: radarr
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 7878
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /movies
              name: movies
      initContainers: []
      nodeSelector:
        kubernetes.io/hostname: edgenix
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-radarr-config
        - name: radarr-database-password
          secret:
            secretName: radarr-database-password
        - name: downloads
          persistentVolumeClaim:
            claimName: radarr-radarr-downloads
        - name: movies
          persistentVolumeClaim:
            claimName: radarr-radarr-movies
