manifests/dev/radarr/Ingress-radarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: radarr
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - radarr.home.kronkltd.net
